[build-system]
requires = [
    "setuptools>=42",
    "versioningit >= 1.1.1",
]

build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["ztcli_api"]
omit = [
    "examples",
    "test",
    ".tox",
]

[tool.coverage.paths]
source = ["ztcli_api"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.black]
line-length = 96
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | dist
  | test
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}"

[tool.versioningit.write]
file = "ztcli_api/_version.py"
